completed responsive airbnb css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <span>London</span>
     </div>
 
+    <div class="buttonBox">
     <button>See All Guidebooks</button>
+    </div>
 
     <h3>Just for the weekend</h3>
     <p>
@@ -41,7 +43,9 @@
       <span>San Francisco</span>
     </div>
 
+    <div class="buttonBox">
     <button>See All Destinations</button>
+    </div>
 
   </div>
 
