--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
 <body>
   <div class="wrapper">
+    <!-- <div class="blurb"> -->
     <h3>Meet Guidebooks</h3>
     <p>
       Discover hundreds of local spots recommended by Airbnb hosts
     </p>
+  <!-- </div> -->
+    <div class="grid">
     <div id="box1" class="box">
       <span>San Francisco</span>
     </div>
@@ -23,14 +26,19 @@
     <div id="box3" class="box">
       <span>London</span>
     </div>
+  </div>
 
+  <!-- <div class="button"> -->
     <button>See All Guidebooks</button>
-
+  <!-- </div> -->
+  <!-- <div class="blurb"> -->
     <h3>Just for the weekend</h3>
     <p>
       Discover new, inspiring places close to home.
     </p>
+  <!-- </div> -->
 
+    <div class="grid">
     <div id="box4" class="box">
       <span>Napa</span>
     </div>
@@ -40,11 +48,11 @@
     <div id="box6" class="box">
       <span>San Francisco</span>
     </div>
+  </div>
 
     <button>See All Destinations</button>
 
   </div>
-
 
 
 </body>
