--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p>
       Discover hundreds of local spots recommended by Airbnb hosts
     </p>
-    <div id="box1" class="box">
+    <div class="pic-container">
+     <div id="box1" class="box">
       <span>San Francisco</span>
     </div>
     <div id="box2" class="box">
@@ -22,15 +23,17 @@
     </div>
     <div id="box3" class="box">
       <span>London</span>
-    </div>
+    </div>     
+  </div>
 
-    <button>See All Guidebooks</button>
 
-    <h3>Just for the weekend</h3>
-    <p>
-      Discover new, inspiring places close to home.
-    </p>
+  <button>See All Guidebooks</button>
 
+  <h3>Just for the weekend</h3>
+  <p>
+    Discover new, inspiring places close to home.
+  </p>
+  <div class="pic-container">
     <div id="box4" class="box">
       <span>Napa</span>
     </div>
@@ -40,11 +43,23 @@
     <div id="box6" class="box">
       <span>San Francisco</span>
     </div>
-
-    <button>See All Destinations</button>
-
   </div>
 
+  <button>See All Destinations</button>
+
+</div>
+
+<div class="footer">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+  &copy; 2014 Instagram
+</div>
 
 
 </body>
