--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <p>
       Discover hundreds of local spots recommended by Airbnb hosts
     </p>
-    <div id="box1" class="box">
-      <span>San Francisco</span>
-    </div>
-    <div id="box2" class="box">
-      <span>New York</span>
-    </div>
-    <div id="box3" class="box">
-      <span>London</span>
+    <div class="guidebook-wrapper">
+      <div id="box1" class="box">
+        <span>San Francisco</span>
+      </div>
+      <div id="box2" class="box">
+        <span>New York</span>
+      </div>
+      <div id="box3" class="box">
+        <span>London</span>
+      </div>
     </div>
 
     <button>See All Guidebooks</button>
@@ -31,14 +33,16 @@
       Discover new, inspiring places close to home.
     </p>
 
-    <div id="box4" class="box">
-      <span>Napa</span>
-    </div>
-    <div id="box5" class="box">
-      <span>Sonoma</span>
-    </div>
-    <div id="box6" class="box">
-      <span>San Francisco</span>
+    <div class="destinations-wrapper">
+      <div id="box4" class="box">
+        <span>Napa</span>
+      </div>
+      <div id="box5" class="box">
+        <span>Sonoma</span>
+      </div>
+      <div id="box6" class="box">
+        <span>San Francisco</span>
+      </div>
     </div>
 
     <button>See All Destinations</button>
