Updated files for combined exercise

--- a/index.html
+++ b/index.html
@@ -3,49 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title>css-airbnb mockup</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>CSS Airbnb Mockup</title>
 </head>
-
 <body>
-  <div class="wrapper">
-    <h3>Meet Guidebooks</h3>
-    <p>
-      Discover hundreds of local spots recommended by Airbnb hosts
-    </p>
-    <div id="box1" class="box">
-      <span>San Francisco</span>
-    </div>
-    <div id="box2" class="box">
-      <span>New York</span>
-    </div>
-    <div id="box3" class="box">
-      <span>London</span>
+  <div class="container">
+    <div class="section">
+
+      <div class="title">
+        <h1>
+          Meet Guidebooks
+        </h1>
+        <p class="subtitle">
+          Discover hundreds of local spots recommended by Airbnb hosts
+        </p>
+      </div>
+
+      <div id="SF" class="location">
+        <span class="location-name">San Francisco</span>
+      </div>
+      <div id="NY" class="location">
+        <span class="location-name">New York</span>
+      </div>
+      <div id="London" class="location">
+        <span class="location-name">London</span>
+      </div>
+
+      <div class="more-content">
+        <div class="btn-further">
+          See All Guidebooks
+        </div>
+      </div>
+
     </div>
 
-    <button>See All Guidebooks</button>
+    <div class="section">
 
-    <h3>Just for the weekend</h3>
-    <p>
-      Discover new, inspiring places close to home.
-    </p>
+      <div class="title">
+        <h1>
+          Just for the weekend
+        </h1>
+        <p class="subtitle">
+          Discover new, inspiring places close to home
+        </p>
+      </div>
 
-    <div id="box4" class="box">
-      <span>Napa</span>
+      <div id="Napa" class="location">
+        <span class="location-name">Napa</span>
+      </div>
+      <div id="Sonoma" class="location">
+        <span class="location-name">Sonoma</span>
+      </div>
+      <div id="SF2" class="location">
+        <span class="location-name">San Francisco</span>
+      </div>
+
+      <div class="more-content">
+        <div class="btn-further">
+          See All Destinations
+        </div>
+      </div>
+
     </div>
-    <div id="box5" class="box">
-      <span>Sonoma</span>
-    </div>
-    <div id="box6" class="box">
-      <span>San Francisco</span>
-    </div>
-
-    <button>See All Destinations</button>
-
   </div>
-
-
-
 </body>
 </html>
