--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>CSS Airbnb Mockup</title>
+  <script src="script.js" charset="utf-8"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="section">
 
       <div class="title">
@@ -20,14 +22,28 @@
         </p>
       </div>
 
-      <div id="SF" class="location">
-        <span class="location-name">San Francisco</span>
-      </div>
-      <div id="NY" class="location">
-        <span class="location-name">New York</span>
-      </div>
-      <div id="London" class="location">
-        <span class="location-name">London</span>
+      <div class='row'>
+        <div class='col col-md-8 ml-auto mr-auto'>
+          <div class='row'>
+            <div class='col-md-4'>
+              <div id="SF" class="location">
+                <span class="location-name">San Francisco</span>
+              </div>
+            </div>
+
+            <div class='col-md-4'>
+              <div id="NY" class="location">
+                <span class="location-name">New York</span>
+              </div>
+            </div>
+
+            <div class='col-md-4'>
+              <div id="London" class="location">
+                <span class="location-name">London</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="more-content">
@@ -49,14 +65,28 @@
         </p>
       </div>
 
-      <div id="Napa" class="location">
-        <span class="location-name">Napa</span>
-      </div>
-      <div id="Sonoma" class="location">
-        <span class="location-name">Sonoma</span>
-      </div>
-      <div id="SF2" class="location">
-        <span class="location-name">San Francisco</span>
+      <div class='row'>
+        <div class='col col-md-8 ml-auto mr-auto'>
+          <div class='row'>
+            <div class='col-md-4'>
+              <div id="Napa" class="location">
+                <span class="location-name">Napa</span>
+              </div>
+            </div>
+
+            <div class='col-md-4'>
+              <div id="Sonoma" class="location">
+                <span class="location-name">Sonoma</span>
+              </div>
+            </div>
+
+            <div class='col-md-4'>
+              <div id="SF2" class="location">
+                <span class="location-name">San Francisco</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="more-content">
