--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </p>
       </div>
 
+      <div class="location-section">
       <div id="SF" class="location">
         <span class="location-name">San Francisco</span>
       </div>
@@ -29,6 +30,7 @@
       <div id="London" class="location">
         <span class="location-name">London</span>
       </div>
+    </div>
 
       <div class="more-content">
         <div class="btn-further">
@@ -49,6 +51,7 @@
         </p>
       </div>
 
+      <div class="location-section">
       <div id="Napa" class="location">
         <span class="location-name">Napa</span>
       </div>
@@ -58,6 +61,7 @@
       <div id="SF2" class="location">
         <span class="location-name">San Francisco</span>
       </div>
+    </div>
 
       <div class="more-content">
         <div class="btn-further">
@@ -67,5 +71,6 @@
 
     </div>
   </div>
+  <script type=text/javascript src="script.js"></script>
 </body>
 </html>
