--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
           Discover hundreds of local spots recommended by Airbnb hosts
         </p>
       </div>
+      
+      <div class="photos">
 
-      <div id="SF" class="location">
-        <span class="location-name">San Francisco</span>
-      </div>
-      <div id="NY" class="location">
-        <span class="location-name">New York</span>
-      </div>
-      <div id="London" class="location">
-        <span class="location-name">London</span>
+        <div id="SF" class="location">
+          <span class="location-name">San Francisco</span>
+        </div>
+        <div id="NY" class="location">
+          <span class="location-name">New York</span>
+        </div>
+        <div id="London" class="location">
+          <span class="location-name">London</span>
+        </div>
+
       </div>
 
       <div class="more-content">
@@ -49,14 +53,19 @@
         </p>
       </div>
 
-      <div id="Napa" class="location">
-        <span class="location-name">Napa</span>
-      </div>
-      <div id="Sonoma" class="location">
-        <span class="location-name">Sonoma</span>
-      </div>
-      <div id="SF2" class="location">
-        <span class="location-name">San Francisco</span>
+
+      <div class="photos">
+
+        <div id="Napa" class="location">
+          <span class="location-name">Napa</span>
+        </div>
+        <div id="Sonoma" class="location">
+          <span class="location-name">Sonoma</span>
+        </div>
+        <div id="SF2" class="location">
+          <span class="location-name">San Francisco</span>
+        </div>
+
       </div>
 
       <div class="more-content">
@@ -67,5 +76,7 @@
 
     </div>
   </div>
+
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
