--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>CSS Airbnb Mockup</title>
 </head>
 <body>
   <div class="container">
-    <div class="section">
+    <div class="row section">
 
-      <div class="title">
+      <div class="col-lg-12 title">
         <h1>
           Meet Guidebooks
         </h1>
@@ -19,28 +20,35 @@
           Discover hundreds of local spots recommended by Airbnb hosts
         </p>
       </div>
+      <div class="col-lg-4">
+        <div id="SF" class="location">
+          <span class="location-name">San Francisco</span>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div id="NY" class="location">
+          <span class="location-name">New York</span>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div id="London" class="location">
+          <span class="location-name">London</span>
+        </div>
+      </div>
 
-      <div id="SF" class="location">
-        <span class="location-name">San Francisco</span>
-      </div>
-      <div id="NY" class="location">
-        <span class="location-name">New York</span>
-      </div>
-      <div id="London" class="location">
-        <span class="location-name">London</span>
-      </div>
-
-      <div class="more-content">
-        <div class="btn-further">
-          See All Guidebooks
+      <div class="col-lg-12 more-content">
+        <div class="col-lg-12">
+          <div class="btn-further">
+            See All Guidebooks
+          </div>
         </div>
       </div>
 
     </div>
 
-    <div class="section">
+    <div class="row section">
 
-      <div class="title">
+      <div class="col-lg-12 title">
         <h1>
           Just for the weekend
         </h1>
@@ -48,20 +56,26 @@
           Discover new, inspiring places close to home
         </p>
       </div>
-
-      <div id="Napa" class="location">
-        <span class="location-name">Napa</span>
+      <div class="col-lg-4">
+        <div id="Napa" class="location">
+          <span class="location-name">Napa</span>
+        </div>
       </div>
-      <div id="Sonoma" class="location">
-        <span class="location-name">Sonoma</span>
+      <div class="col-lg-4">
+        <div id="Sonoma" class="location">
+          <span class="location-name">Sonoma</span>
+        </div>
       </div>
-      <div id="SF2" class="location">
-        <span class="location-name">San Francisco</span>
+      <div class="col-lg-4">
+        <div id="SF2" class="location">
+          <span class="location-name">San Francisco</span>
+        </div>
       </div>
-
-      <div class="more-content">
-        <div class="btn-further">
-          See All Destinations
+      <div class="col-lg-12 more-content">
+        <div class="col-lg-12">
+          <div class="btn-further">
+            See All Destinations
+          </div>
         </div>
       </div>
 
